--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ body {
   font-size:0.9735rem;
   line-height: 140%;
   letter-spacing: 0.1px;
+  color:var(--grey-500);
 }
 
 .section-heading p {
