--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ body {
 
 @media screen and (min-width:48rem){
   .section-heading h1 {
-  font-family:Poppins Extra-Light, sans-serif;
+  font-family:Poppins Thin, sans-serif;
   font-size:clamp(1.5rem, 0.784rem + 3.053vw, 2.25rem);
   line-height:140%;
   letter-spacing: 0.25px;
